[gd_scene load_steps=16 format=3 uid="uid://chj7lw3hs80su"]

[ext_resource type="Script" path="res://scenes/player/Player.gd" id="1_425yu"]
[ext_resource type="Texture2D" uid="uid://eqg7mcsnyd1t" path="res://assets/player_placeholder.png" id="1_j5pae"]
[ext_resource type="Script" path="res://components/move_component.gd" id="1_wbhel"]
[ext_resource type="Script" path="res://components/move_input_component.gd" id="3_7fa1p"]
[ext_resource type="Resource" uid="uid://c16t72lproq74" path="res://scenes/player/player_stats.tres" id="4_mip03"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="6_xnnqj"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="7_0lfsk"]
[ext_resource type="Script" path="res://components/health_component.gd" id="8_dbiyb"]
[ext_resource type="Script" path="res://components/knockback_component.gd" id="9_s1shj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8rwle"]
size = Vector2(6, 14)

[sub_resource type="Animation" id="Animation_lng5c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_biqfk"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_beehk"]
resource_name = "walk"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.139626, 0.0, 0.139626]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g0agg"]
_data = {
"RESET": SubResource("Animation_lng5c"),
"idle": SubResource("Animation_biqfk"),
"walk": SubResource("Animation_beehk")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k43wd"]
size = Vector2(6, 14)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_425yu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8rwle")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_j5pae")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "anim_player", "sprite", "knockback_component")]
script = ExtResource("1_wbhel")
actor = NodePath("..")
move_stats = ExtResource("4_mip03")
anim_player = NodePath("../AnimationPlayer")
sprite = NodePath("../Sprite")
knockback_component = NodePath("../KnockbackComponent")

[node name="MoveInputComponent" type="Node" parent="." node_paths=PackedStringArray("move_component")]
script = ExtResource("3_7fa1p")
move_component = NodePath("../MoveComponent")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g0agg")
}

[node name="CameraAnchor" type="RemoteTransform2D" parent="."]

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("6_xnnqj")
color = Color(1, 1, 1, 0)
sprite = NodePath("../Sprite")
flash_duration = 0.33

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
script = ExtResource("7_0lfsk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("RectangleShape2D_k43wd")

[node name="HealthComponent" type="Node" parent="." node_paths=PackedStringArray("hurtbox_component", "flash_component")]
script = ExtResource("8_dbiyb")
hurtbox_component = NodePath("../HurtboxComponent")
flash_component = NodePath("../FlashComponent")

[node name="KnockbackComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "hurtbox_component")]
script = ExtResource("9_s1shj")
actor = NodePath("..")
hurtbox_component = NodePath("../HurtboxComponent")
